⚡️ Faster release build

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-rustflags = ["--cfg", "tokio_unstable"]
+rustflags = ["--cfg", "tokio_unstable", "-Clink-args=-fuse-ld=lld"]
 
 [alias]
 ntest = "nextest run --workspace"
