--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,6 +137,7 @@ risc0-recursion = { path = "./contracts/risc0-recursion" }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
     "client",
 ] }
+signal-child = "1.0.6"
 
 [features]
 default = ["tx_builder", "node"]
