--- a/contract-sdk/Cargo.toml
+++ b/contract-sdk/Cargo.toml
@@ -17,7 +17,7 @@ anyhow = "1.0.89"
 tracing = { version = "0.1", optional = true }
 
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
-sp1-zkvm = { version = "3.4.0", optional = true }
+sp1-zkvm = { version = "4.0.0-rc.8", optional = true }
 
 [dev-dependencies]
 mockall = "0.13.0"
