--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -17,7 +17,7 @@ borsh = "1.5.3"
 base64 = "0.22.1"
 
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
-sp1-sdk = { version = "3.4.0", optional = true }
+sp1-sdk = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
 risc0 = ["dep:risc0-zkvm"]
