--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,12 +58,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1" }
 serde_with = { version = "3.12.0", features = ["hex"] }
 sha3 = "0.10.8"
-sqlx = { version = "0.8.3", features = [
-    "runtime-tokio",
-    "postgres",
-    "migrate",
-    "chrono",
-] }
 strum_macros = "0.26.4"
 tracing = "0.1"
 
@@ -100,6 +94,12 @@ risc0-zkvm = { version = "1.2.0", default-features = false, features = [
 ], optional = true }
 ron = { version = "0.8.1", optional = true }
 sp1-sdk = { version = "3.4.0", default-features = false, optional = true }
+sqlx = { version = "0.8.3", features = [
+    "runtime-tokio",
+    "postgres",
+    "migrate",
+    "chrono",
+], optional = true }
 syn = { version = "2.0.95", optional = true }
 tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
 tokio-util = { version = "0.7.13", optional = true }
@@ -180,6 +180,7 @@ node = [
     "dep:risc0-zkvm",
     "dep:ron",
     "dep:sp1-sdk",
+    "dep:sqlx",
     "dep:syn",
     "dep:tokio",
     "dep:tokio-util",
