--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -17,7 +17,7 @@ base64 = "0.22.1"
 
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
-sp1-sdk = { version = "3.4.0", default-features = false, optional = true }
+sp1-sdk = { version = "4.0.0-rc.8", default-features = false, optional = true }
 
 [features]
 default = ["risc0", "sp1"]
