--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -20,6 +20,7 @@ risc0-zkvm = { version = "1.2", default-features = false, optional = true }
 sp1-sdk = { version = "3.4.0", default-features = false, optional = true }
 
 [features]
+default = ["risc0", "sp1"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk"]
 
