✨ Add SP1 prover to client sdk (#555)
* ✨ Add SP1 prover to client sdk

* fix features

* bonsai runner only for risc0

* fix build

* fix lock: take from main & run test

* better builder

* small refacto

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,6 +145,7 @@ tx_builder = [
     "dep:risc0-zkvm",
 ]
 node = [
+    "client-sdk/risc0",
     "dep:anymap",
     "dep:assertables",
     "dep:axum",
