--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 members = [
-    "contracts",
-    "contracts/amm",
-    "contracts/hydentity",
-    "contracts/hyllar",
-    "contracts/staking",
-    "contracts/risc0-recursion",
+    "crates/contracts",
+    "crates/contracts/amm",
+    "crates/contracts/hydentity",
+    "crates/contracts/hyllar",
+    "crates/contracts/staking",
+    "crates/contracts/risc0-recursion",
 
     "crates/bonsai-runner",
     "crates/hyrun",
@@ -43,8 +43,8 @@ required-features = ["node"]
 
 [dependencies]
 # Public dependencies
-hyle-contract-sdk = { path = "./contract-sdk", default-features = false }
-staking = { path = "./contracts/staking", default-features = false }
+hyle-contract-sdk = { path = "./crates/contract-sdk", default-features = false }
+staking = { path = "./crates/contracts/staking", default-features = false }
 client-sdk = { path = "./crates/client-sdk", default-features = false }
 
 anyhow = "1.0.95"
@@ -62,11 +62,11 @@ strum_macros = "0.26.4"
 tracing = "0.1"
 
 # Node dependencies
-hydentity = { path = "./contracts/hydentity", features = [
+hydentity = { path = "./crates/contracts/hydentity", features = [
     "client",
 ], optional = true }
-hyllar = { path = "./contracts/hyllar", features = ["client"], optional = true }
-risc0-recursion = { path = "./contracts/risc0-recursion", optional = true }
+hyllar = { path = "./crates/contracts/hyllar", features = ["client"], optional = true }
+risc0-recursion = { path = "./crates/contracts/risc0-recursion", optional = true }
 
 anymap = { version = "0.12.1", optional = true }
 assertables = { version = "9.5.0", optional = true }
@@ -80,7 +80,7 @@ clap = { version = "4.5.24", features = ["derive"], optional = true }
 config = { version = "0.15.0", optional = true }
 dhat = { version = "0.3.3", optional = true }
 futures = { version = "0.3.31", optional = true }
-hyle-contracts = { path = "./contracts", package = "hyle-contracts", optional = true }
+hyle-contracts = { path = "./crates/contracts", package = "hyle-contracts", optional = true }
 indexmap = { version = "2.7.0", features = ["serde"], optional = true }
 # opentelemetry and axum-otel-metrics must be updated together (so that there is only one opentelemetry version)
 opentelemetry = { version = "0.27", optional = true }
@@ -111,7 +111,7 @@ tracing-subscriber = { version = "0.3", features = ["json"], optional = true }
 fjall = { version = "2.4.4", optional = true }
 
 [dev-dependencies]
-amm = { path = "./contracts/amm" }
+amm = { path = "./crates/contracts/amm" }
 assert_cmd = "2.0.16"
 tokio-tungstenite = "0.26.1"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
@@ -126,7 +126,7 @@ tempfile = "3.15.0"
 testcontainers-modules = { version = "0.11.5", features = ["postgres"] }
 assert-json-diff = "2.0.2"
 hyrun = { path = "./crates/hyrun" }
-risc0-recursion = { path = "./contracts/risc0-recursion" }
+risc0-recursion = { path = "./crates/contracts/risc0-recursion" }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
     "client",
 ] }
