--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -30,7 +30,7 @@ borsh = "1.5.3"
 hex = "0.4.3"
 hydentity = { path = "../hydentity" }
 hyle-contracts = { path = ".." }
-hyrun = { path = "../../crates/hyrun" }
+hyrun = { path = "../../hyrun" }
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
     'std',
     'prove',
