--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -25,7 +25,7 @@ hex = "0.4.3"
 risc0-zkvm = { version = "1.2.0", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../crates/client-sdk", package = "client-sdk", optional = true }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", optional = true }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.0", default-features = false, features = [
