--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "crates/bonsai-runner",
     "crates/hyrun",
     "crates/client-sdk",
+    "crates/hyle-loadtest",
 ]
 resolver = "2"
 
@@ -77,7 +78,7 @@ bonsai-runner = { path = "./crates/bonsai-runner", optional = true }
 borsh = { version = "1.5.3", optional = true }
 bytes = { version = "1.9.0", optional = true }
 clap = { version = "4.5.24", features = ["derive"], optional = true }
-config = { version = "0.15.0", optional = true }
+config = { version = "=0.15.0", optional = true }
 dhat = { version = "0.3.3", optional = true }
 futures = { version = "0.3.31", optional = true }
 hyle-contracts = { path = "./contracts", package = "hyle-contracts", optional = true }
