--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.216", features = ["derive"] }
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 borsh = "1.5.3"
 base64 = "0.22.1"
+serde_json = "1.0.134"
 
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
@@ -23,4 +24,3 @@ sp1-sdk = { version = "4.0.0-rc.8", default-features = false, optional = true }
 default = ["risc0", "sp1"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk"]
-
