--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
         uses: peter-evans/create-pull-request@v7
         with:
           commit-message: "🔖 Bump version to ${{ github.ref_name }}"
+          base: main
           title: "🔖 Bump version to ${{ github.ref_name }}"
       - name: Enable Pull Request Automerge
         run: gh pr merge --squash --auto
