✨ Add ping to TcpServer

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,9 @@ repos:
         args:
           [
             "--workspace",
-            "--all-targets",
-            "--all-features",
             "--",
             "-D",
             "warnings",
           ]
       - id: cargo-check
-        args: ["--workspace", "--all-targets", "--all-features"]
+        args: ["--workspace"]
