--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -10,10 +10,10 @@ repository.workspace = true
 serde_json = "1.0.135"
 tokio = "1.42"
 hyle = { path = "../../", features = ["tx_builder"] }
-hyllar = { path = "../../contracts/hyllar" }
-hydentity = { path = "../../contracts/hydentity" }
-hyle-contracts = { path = "../../contracts", package = "hyle-contracts" }
-hyle-contract-sdk = { path = "../../contract-sdk" }
+hyllar = { path = "../contracts/hyllar" }
+hydentity = { path = "../contracts/hydentity" }
+hyle-contracts = { path = "../contracts", package = "hyle-contracts" }
+hyle-contract-sdk = { path = "../contract-sdk" }
 client-sdk = { path = "../client-sdk" }
 
 anyhow = "1.0.95"
