--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -15,6 +15,9 @@ bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 borsh = "1.5.3"
 base64 = "0.22.1"
 serde_json = "1.0.134"
+derive_more = { version = "1.0.0", features = ["display"] }
+hex = { version = "0.4.3" }
+sha3 = "0.10.8"
 
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
