✅ Make integration tests isolated with random port

--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -17,3 +17,5 @@ retries = 2
 # The number of threads to run tests with. Supported values are either an integer or
 # the string "num-cpus". Can be overridden through the `--test-threads` option.
 test-threads = "num-cpus"
+
+slow-timeout = { period = "60s", terminate-after = 2 }
