--- a/crates/contract-sdk/Cargo.toml
+++ b/crates/contract-sdk/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", default-features = false, features = [
     "alloc",
 ] }
 bincode = { version = "2.0.0-rc.3" }
-anyhow = "1.0.89"
+hex = "0.4.3"
 tracing = { version = "0.1", optional = true }
 
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
