--- a/crates/contract-sdk/Cargo.toml
+++ b/crates/contract-sdk/Cargo.toml
@@ -7,12 +7,12 @@ homepage = { workspace = true }
 repository = { workspace = true }
 
 [dependencies]
+hyle_model = { path = "../hyle-model", package = "hyle-model", default-features = false }
 serde = { version = "1.0", default-features = false, features = [
     "derive",
     "alloc",
 ] }
 bincode = { version = "2.0.0-rc.3" }
-hex = "0.4.3"
 anyhow = "1.0.89"
 tracing = { version = "0.1", optional = true }
 
