--- a/crates/client-sdk/Cargo.toml
+++ b/crates/client-sdk/Cargo.toml
@@ -8,16 +8,27 @@ repository = { workspace = true }
 
 [dependencies]
 sdk = { path = "../contract-sdk", package = "hyle-contract-sdk" }
+hyle_model = { path = "../hyle-model", package = "hyle-model", features = ["full"]}
 
 anyhow = "1.0.94"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 borsh = "1.5.3"
+serde_json = { version = "1" }
 
 bonsai-runner = { path = "../bonsai-runner", optional = true }
 risc0-zkvm = { version = "1.2", default-features = false, optional = true }
 sp1-sdk = { version = "4.0.0", default-features = false, optional = true }
 
+# Rest feature
+reqwest = { version = "0.12", features = ["json"], optional = true }
+
+# Tcp feature
+tokio = { version = "1.42.0", optional = true }
+tokio-util = { version = "0.7.13", optional = true }
+futures = { version = "0.3.31", optional = true }
+
 [features]
-default = ["risc0", "sp1"]
+rest = ["dep:reqwest"]
+tcp = ["dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures"]
 risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
 sp1 = ["dep:sp1-sdk"]
