--- a/crates/hyle-loadtest/Cargo.toml
+++ b/crates/hyle-loadtest/Cargo.toml
@@ -8,15 +8,14 @@ repository.workspace = true
 
 [dependencies]
 tokio = "1.42"
-hyle = { path = "../../", features = ["tx_builder"] }
-hyllar = { path = "../contracts/hyllar" }
-hydentity = { path = "../contracts/hydentity" }
+hyllar = { path = "../contracts/hyllar", features = ["client"] }
+hydentity = { path = "../contracts/hydentity", features = ["client"] }
 hyle-contracts = { path = "../contracts", package = "hyle-contracts" }
 hyle-contract-sdk = { path = "../contract-sdk" }
-client-sdk = { path = "../client-sdk" }
+client-sdk = { path = "../client-sdk", features = ["tcp", "risc0"] }
 
 anyhow = "1.0.95"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
-clap = "4.5.26"
+clap = { version = "4.5.26", features = ["derive"]}
 tracing = "0.1"
 tracing-subscriber = "0.3"
