--- a/.github/workflows/github_stars.yml
+++ b/.github/workflows/github_stars.yml
@@ -20,12 +20,19 @@ jobs:
 
     - name: Install dependencies
       run: npm install axios
+      
+    - name: Restore stars count from cache
+      id: restore_cache
+      uses: actions/cache@v3
+      with:
+        path: stars_count.txt
+        key: stars-cache
 
     - name: Run script
       env:
         GITHUB_REPOSITORY: ${{ github.repository }}
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-      run: node check-stars.js
+      run: node .github/scripts/check-stars.js
 
     - name: Cache stars count
       uses: actions/cache@v3
