Run only once at 10am

--- a/.github/workflows/github_stars.yml
+++ b/.github/workflows/github_stars.yml
@@ -2,7 +2,7 @@ name: Check Stars and Notify Slack
 
 on:
   schedule:
-    - cron: "0 * * * *" # Toutes les heures
+    - cron: "0 10 * * *" # Toutes les heures
   workflow_dispatch: # Permet de lancer manuellement le workflow
 
 jobs:
