💚 Fix github stars ci (#632)
* 💚 Fix github stars ci

* better cache

* Run only once at 10am

--- a/.github/workflows/github_stars.yml
+++ b/.github/workflows/github_stars.yml
@@ -2,7 +2,7 @@ name: Check Stars and Notify Slack
 
 on:
   schedule:
-    - cron: "0 * * * *" # Toutes les heures
+    - cron: "0 10 * * *" # Toutes les heures
   workflow_dispatch: # Permet de lancer manuellement le workflow
 
 jobs:
@@ -20,15 +20,16 @@ jobs:
 
     - name: Install dependencies
       run: npm install axios
-
-    - name: Run script
-      env:
-        GITHUB_REPOSITORY: ${{ github.repository }}
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-      run: node check-stars.js
-
+      
     - name: Cache stars count
       uses: actions/cache@v3
       with:
         path: stars_count.txt
         key: stars-cache
+
+    - name: Run script
+      env:
+        GITHUB_REPOSITORY: ${{ github.repository }}
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      run: node .github/scripts/check-stars.js
+
