--- a/crates/contracts/amm/Cargo.toml
+++ b/crates/contracts/amm/Cargo.toml
@@ -23,8 +23,11 @@ bincode = { version = "2.0.0-rc.3" }
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, features = [
     'std',
 ] }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", optional = true }
+tracing = "0.1"
 
 [features]
 default = ["metadata"]
 metadata = []
+client = ["metadata", "dep:client_sdk"]
 risc0 = ["dep:risc0-zkvm", "sdk/risc0"]
