--- a/crates/contract-sdk/Cargo.toml
+++ b/crates/contract-sdk/Cargo.toml
@@ -15,7 +15,7 @@ serde = { version = "1.0", default-features = false, features = [
 bincode = { version = "2.0.0-rc.3" }
 tracing = { version = "0.1", optional = true }
 
-risc0-zkvm = { version = "1.2", default-features = false, optional = true }
+risc0-zkvm = { version = "1.2.1", default-features = false, optional = true }
 sp1-zkvm = { version = "4.0.0-rc.8", optional = true }
 
 [dev-dependencies]
@@ -25,3 +25,4 @@ mockall = "0.13.0"
 risc0 = ["dep:risc0-zkvm"]
 sp1 = ["dep:sp1-zkvm"]
 tracing = ["dep:tracing"]
+full-model = ["hyle_model/full"]
