--- a/crates/contracts/risc0-recursion/Cargo.toml
+++ b/crates/contracts/risc0-recursion/Cargo.toml
@@ -25,12 +25,17 @@ risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, fea
 ] }
 
 [dev-dependencies]
+anyhow = "1.0.95"
 bincode = "2.0.0-rc.3"
 borsh = "1.5.3"
 hex = "0.4.3"
-hydentity = { path = "../hydentity" }
+hydentity = { path = "../hydentity", features = ["client"] }
 hyle-contracts = { path = ".." }
-hyrun = { path = "../../hyrun" }
+client-sdk = { path = "../../client-sdk" }
+sdk = { path = "../../contract-sdk", package = "hyle-contract-sdk", features = [
+    "full-model",
+] }
+tokio = { version = "1.42.0" }
 risc0-zkvm = { version = "1.2.1", default-features = false, features = [
     'std',
     'prove',
