--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ hydentity = { path = "./crates/contracts/hydentity", features = ["client"] }
 hyllar = { path = "./crates/contracts/hyllar", features = ["client"] }
 risc0-recursion = { path = "./crates/contracts/risc0-recursion" }
 
-hyle-verifiers = { path = "crates/hyle-verifiers", optional = true }
+hyle-verifiers = { path = "crates/hyle-verifiers" }
 
 anyhow = "1.0.95"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
@@ -143,10 +143,7 @@ risc0-zkvm = { version = "1.2.1", default-features = false, features = [
 signal-child = "1.0.6"
 
 [features]
-default = ["hyle-verifiers"]
-
-# Allows reducing turnaround compile-time in some cases.
-hyle-verifiers = ["dep:hyle-verifiers"]
+default = []
 
 dhat = ["dep:dhat"]
 # Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
