--- a/crates/contracts/amm/Cargo.toml
+++ b/crates/contracts/amm/Cargo.toml
@@ -23,7 +23,9 @@ bincode = { version = "2.0.0-rc.3" }
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", optional = true }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
+    "risc0",
+], optional = true }
 
 [features]
 default = ["metadata"]
