--- a/crates/contracts/hyllar/Cargo.toml
+++ b/crates/contracts/hyllar/Cargo.toml
@@ -24,7 +24,9 @@ serde_with = "3.12.0"
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", optional = true }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", features = [
+    "risc0",
+], optional = true }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.1", default-features = false, features = [
