--- a/crates/contracts/staking/Cargo.toml
+++ b/crates/contracts/staking/Cargo.toml
@@ -24,7 +24,9 @@ bincode = { version = "2.0.0-rc.3" }
 risc0-zkvm = { version = "1.2.1", default-features = false, optional = true, features = [
     'std',
 ] }
-client_sdk = { path = "../../client-sdk", package = "client-sdk", default-features = false, optional = true }
+client_sdk = { path = "../../client-sdk", package = "client-sdk", default-features = false, features = [
+    "risc0",
+], optional = true }
 
 [dev-dependencies]
 risc0-zkvm = { version = "1.2.1", default-features = false, features = [
