👷‍♂️ Move noir/SP1/risc0 verifiers to the hyle-verifiers crate (#639)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "crates/client-sdk",
     "crates/hyle-loadtest",
     "crates/hyle-model",
+    "crates/hyle-verifiers",
 ]
 resolver = "2"
 
@@ -53,7 +54,6 @@ staking = { path = "./crates/contracts/staking", default-features = false, featu
 client-sdk = { path = "./crates/client-sdk", default-features = false, features = [
     "rest",
     "tcp",
-    "risc0",
 ] }
 hyle-model = { path = "./crates/hyle-model", default-features = false, features = [
     "full",
@@ -62,6 +62,8 @@ hyle-model = { path = "./crates/hyle-model", default-features = false, features 
 hydentity = { path = "./crates/contracts/hydentity", features = ["client"] }
 hyllar = { path = "./crates/contracts/hyllar", features = ["client"] }
 risc0-recursion = { path = "./crates/contracts/risc0-recursion" }
+
+hyle-verifiers = { path = "crates/hyle-verifiers" }
 
 anyhow = "1.0.95"
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
@@ -79,12 +81,10 @@ anymap = { version = "0.12.1" }
 assertables = { version = "9.5.0" }
 axum = { version = "0.8.1", features = ["ws", "macros"] }
 axum-otel-metrics = { version = "0.9.1" }
-axum-test = { version = "17.1.0" }
-bonsai-runner = { path = "./crates/bonsai-runner" }
 borsh = { version = "1.5.3" }
 bytes = { version = "1.9.0" }
 clap = { version = "4.5.26", features = ["derive"] }
-config = { version = "=0.15.0" }
+config = { version = "=0.15.0", default-features = false, features = ["ron"] }
 futures = { version = "0.3.31" }
 hyle-contracts = { path = "./crates/contracts", package = "hyle-contracts" }
 indexmap = { version = "2.7.0", features = ["serde"] }
@@ -95,9 +95,7 @@ paste = { version = "1.0.15" }
 prometheus = { version = "0.13.4" }
 quote = { version = "1.0.38" }
 rand = { version = "0.8.5" }
-risc0-zkvm = { version = "1.2.1", default-features = false, features = ["std"] }
 ron = { version = "0.8.1" }
-sp1-sdk = { version = "4.0.0", default-features = false }
 sqlx = { version = "0.8.3", features = [
     "runtime-tokio",
     "postgres",
@@ -108,13 +106,25 @@ syn = { version = "2.0.96" }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 tokio-util = { version = "0.7.13" }
 tower-http = { version = "0.6.2", features = ["trace", "cors"] }
-tracing-subscriber = { version = "0.3", features = ["json"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = [
+    "env-filter",
+    "fmt",
+    "json",
+] }
 fjall = { version = "2.4.4" }
 
 dhat = { version = "0.3.3", optional = true }
+
 [dev-dependencies]
 amm = { path = "./crates/contracts/amm", features = ["client"] }
+client-sdk = { path = "./crates/client-sdk", default-features = false, features = [
+    "rest",
+    "tcp",
+    "risc0",
+] }
+
 assert_cmd = "2.0.16"
+axum-test = { version = "17.1.0" }
 tokio-tungstenite = "0.26.1"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 serde_json = "1.0.135"
@@ -134,6 +144,7 @@ signal-child = "1.0.6"
 
 [features]
 default = []
+
 dhat = ["dep:dhat"]
 # Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
 nonreproducible = ["hyle-contracts/nonreproducible"]
