--- a/.github/workflows/github_stars.yml
+++ b/.github/workflows/github_stars.yml
@@ -38,7 +38,7 @@ jobs:
         git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
         git add .
         STAR_COUNT=$(cat stars_count.txt)
-        git commit -m "⭐ Update star count to ${STAR_COUNT}"
+        git commit -m "⭐ Update star count to ${STAR_COUNT}" || true
 
     - name: Push changes
       uses: ad-m/github-push-action@master
