--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,12 +58,16 @@ jobs:
           CLEAN_VERSION=$(echo "$VERSION" | sed 's/^v//')
           sed -i "s/^version = \".*\"$/version = \"$CLEAN_VERSION\"/" Cargo.toml
           cargo update hyle
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config --global user.name "hyle-gh-bot[bot]"
+          git config --global user.email "196068951+hyle-gh-bot[bot]@users.noreply.github.com"
           git add .
           git commit -m "🔖 Bump version to ${VERSION}" 
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - name: Create Pull Request
+        id: cpr
+        uses: peter-evans/create-pull-request@v7
         with:
-          github_token: ${{ steps.app-token.outputs.token }}
+          commit-message: "🔖 Bump version to ${{ github.ref_name }}"
+          base: main
+          title: "🔖 Bump version to ${{ github.ref_name }}"
+      - name: Enable Pull Request Automerge
+        run: gh pr merge --squash --auto
